# src/server.js
@@ -31,6 +31,7 @@ const feedbackRouter = require("./routes/feedback.route");
 const paymentRouter = require("./routes/payment.route.js");
 const webhookRouter = require("./routes/webhook.route.js");
 const taskRouter = require("./routes/task.route.js");
+const packageRouter = require("./routes/package.routes");
 
 const whiteList = [
   "http://localhost:5173",
@@ -88,6 +89,7 @@ app.use("/api/payments", paymentRouter);
 app.use("/api/feedback", feedbackRouter);
 app.use("/api/payments/webhook", webhookRouter);
 app.use("/api/tasks", taskRouter);
+app.use("/api/packages", packageRouter);
 
 // Swagger documentation
 const swaggerDocument = require("../swagger.json");
